--- a/estilo/style.css
+++ b/estilo/style.css
@@ -31,6 +31,7 @@ header > h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p{
@@ -53,7 +54,7 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 4.5em;
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -62,6 +63,8 @@ section.normal{
 }
 
 section.imagem{
+    display: inline-block;
+    padding: 5px;
     background-color: rgb(51, 51, 51);
     color: white;
 }
