--- a/estilo/style.css
+++ b/estilo/style.css
@@ -57,6 +57,10 @@ section{
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 1em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -71,6 +75,14 @@ section.imagem{
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.397);
+}
+
+section#img01{
+    background-image: url();
+}
+
+section#img02{
+    
 }
 
 footer{
